# awesome

./: .gitignore  README.md  naming_guidelines.md  pyproject.toml  pyrightconfig.json  swe_checklist.md
a_core/: settings.py  urls.py  utils.py
a_posts/: admin.py  forms.py  models.py  tests.py  views.py
a_posts/migrations/: 0001_initial.py  0002_alter_post_options_post_artist_post_url.py  0003_tag_post_tags.py  0004_alter_tag_options_tag_order.py  0005_tag_image.py  0006_post_author.py  0007_comment.py  0008_alter_comment_options_reply.py  0009_rename_parent_post_reply_parent_comment.py  0010_alter_reply_parent_comment.py  0011_likedpost_post_likes.py  0012_likedcomment_comment_likes.py  0013_likedreply_reply_likes.py
a_users/: apps.py  forms.py  models.py  signals.py  tests.py  views.py
a_users/migrations/: 0001_initial.py
templates/: 404.html  base.html
templates/a_posts/: comment.html  comment_delete.html  home.html  post.html  post_create.html  post_delete.html  post_edit.html  post_page.html  reply.html  reply_delete.html
templates/a_users/: profile.html  profile_delete.html  profile_edit.html  profile_onboarding.html
templates/account/: signup.html
templates/allauth/layouts/: base.html
templates/includes/: header.html  sidebar.html
templates/layouts/: a.html  b.html  c.html  d.html
templates/partials/: add_comment.html  likes.html  likes_comment.html  likes_reply.html
