[project]
name = "awesome"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "django>=5.2.4",
  "django-allauth>=65.10.0",
  "pillow>=11.3.0",
  "requests>=2.32.4",
]

[dependency-groups]
dev = [
    "django-stubs>=5.2.2",
]
